# spec-agent

./: .gitignore  README.md  allowed_IP.txt  authen.yaml  deploy.sh  pyproject.toml  requirements.txt  run.sh  test.py
aks/: chatbot-deployment.yaml  chatbot-hpa.yaml  chatbot-service.yaml  data-pvc.yaml  deploy_aks.sh  load_data.sh
data/PLM/: mbom_assy_sub_parts_all_models.parquet  mbom_assy_sub_parts_all_models_with_specbook.parquet  part_info.parquet  parts_in_BOM.parquet
data/specbook/: filename_to_specbook_summary.json  part_and_specbook_information.csv  parts_in_specbook.json  specbook_basename_to_parts.json
data/specbook/specbook_md_rewrite/: 7DCTx00_BMW_VINFAST_Safety_concept_2021209_R01.txt  C-SUV Features List_20200904_BEV_APPROVED.txt  C-SUV Features List_20200904_ICE_APPROVED.txt  C-SUV PALS Proposal_ver 04.txt  CCU 1 VFDSXVEEP6007_CCU_CLIMATE CONTROL UNIT_VFe35_V1.3.txt  CCU II VFDSXVEEP6007_CCU_CLIMATE CONTROL UNIT_VFe35_Release_Note_V1.3.txt  CES_VINFAST_EE_VFDSXVEEP0014_CLAMP_Specification_v0.3.5.txt  (+646 more)
scripts/: Mistral_OCR.ipynb  RAG.ipynb  eval_set.json  output.txt  pdf_to_markdown.py  play.ipynb  spec_chunks.pkl
src/: api.py  cache.py  pdf_to_markdown.py  play.ipynb  play.py  schema.py  tool.py
src/.azure/: config
src/spec/: __init__.py  models.py  service.py
src/spec/ui/: app.py  (+4 more)
src/spec_agent/: service.py
src/template_html/: visualize_3d.py  visualize_pdf.py
src/utils/: authengen.py  blob.py  display_3d.py  guardrail.py  llm.py  notebook.py  postgresql.py  pretty_print.py
teraform/: main.tf  outputs.tf  providers.tf  variables.tf
(+699 files in other folders)
